> Trace label and controls moved left to align with other controls in control panel.
> Removed clear button by trace
> Added clear button by recording controls
> Blue timeline color matches the trace color
> Timeline blue line thinner so that it looks more like "inside" the timeline
> When you hit "clear" button for trace, recording should not begin until you move the bug (like start up state). Bug will stay in last position, and clear the trace and recording, but not begin recording until bug is moved.
> Removed checkbox for "Hide mouse during drag"
> Added the label "Vectors" above the controls for showing/hiding vectors.
> Added radio buttons in the play controls box for "Recording" and "Playback" modes. These will double as indicators of the current mode.

# 1.20.26 (28105) Feb 5, 2009
> Added fade feature on dot trace
> Removed invisible and solid line traces
> Improve thumb handle on timeline
> Improve graphics for timeline track
> Timeline doesn't disappear during record

# 1.20.25 (28043) Feb 03 2009
> Added fudge factors to improve velocity and acceleration scales
> Inverted Y Axis so that positive Y is up
> Major performance improvements
> Should show acceleration and velocity while moving to circle.
> Should have smooth transition between linear and circular motion modes.

# 1.20.24 (27822) 01-31-2009
> Fixed: Remote control doesn't show correct initial position
> Fixed: When switching to manual from a premade motion, don't jump to old last recorded position.
> Fixed: Return ladybug is broken
> Added fade trace option, works during record and playback
> Set fade path to default
> Fixed remote control to use new position mode sampling
> Added partial fade path
> Added faint blue background for timeline

# 1.20.23 (27797) 01-30-2009
> Changed to Motion2D model
> Put black outlines on the vel and acc vectors to help them stand out
> Reduce speed of preset motions

# 1.20.22 (27694) 01-26-2009
# 1.20.21 (27692) 01-26-2009